--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "normalize.css": "^8.0.0",
     "nuxt": "^1.3.0",
     "postcss-import": "^11.1.0"
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "cd v3 && nuxt",
+    "dev": "nuxt",
     "build": "node src/main.js",
     "publish": "npm run build && ./scripts/publish.sh"
   },
