--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {
-    "dev": "nuxt",
-    "build": "node src/main.js",
-    "publish": "npm run build && ./scripts/publish.sh"
+    "dev": "nuxt"
   },
   "author": "",
   "license": "ISC"
