--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "normalize.css": "^8.0.0",
-    "nuxt": "^1.3.0",
+    "nuxt": "^2.1.0",
     "postcss-import": "^11.1.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "postcss-nested": "^4.1.0"
+  },
   "scripts": {
     "dev": "nuxt"
   },
