Add the Rustacean Report

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.3.1",
+    "axios": "^0.18.0",
+    "chart.js": "^2.7.3",
     "normalize.css": "^8.0.0",
     "nuxt": "^2.1.0",
     "postcss-import": "^11.1.0"
