--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.3.1",
+    "@nuxtjs/google-analytics": "^2.0.2",
     "axios": "^0.18.0",
     "chart.js": "^2.7.3",
     "normalize.css": "^8.0.0",
