--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,13 @@ jobs:
             - node_modules
           key: deps-{{ checksum ".circleci/config.yml" }}-{{ checksum "package.json" }}
       - run: ./build.sh
+
+      - run:
+          name: "Install Hugo"
+          command: ls -l hugo || wget -O - https://github.com/gohugoio/hugo/releases/download/v0.55.6/hugo_0.55.6_Linux-64bit.tar.gz | tar zxvf -
+      - run: cd v2 && ../hugo
+      - run: rsync -rv v2/public/ dist/
+
       - persist_to_workspace:
           root: ~/work/dist
           paths:
