--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:9.5
+      - image: circleci/node:10-stretch
 
     working_directory: ~/work
 
@@ -37,7 +37,7 @@ jobs:
             - ./*
   deploy:
     docker:
-      - image: circleci/node:9.5
+      - image: circleci/node:10-stretch
     working_directory: ~/work
     steps:
       - attach_workspace:
