I think that the mouthful name is cooler

--- a/v2/data/jobs.yaml
+++ b/v2/data/jobs.yaml
@@ -13,7 +13,7 @@
   location: Harajuku, Tokyo / Shibuya, Tokyo
   years: April 2008 -- July 2012
 - company:
-    en: AIST
+    en: National Institute of Advanced Industrial Science and Technology
     ja: 独立行政法人産業技術総合研究所
   location: Akihabara, Tokyo
   years: Oct 2007 -- Mar 2008 (Part-Time)
