--- a/v3/package.json
+++ b/v3/package.json
@@ -6,6 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^12.0.9",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
