--- a/v3/tsconfig.json
+++ b/v3/tsconfig.json
@@ -22,7 +22,8 @@
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "pages/_app.js"
   ],
   "exclude": [
     "node_modules"
