--- a/v3/package.json
+++ b/v3/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@mdx-js/loader": "^1.6.22",
     "@next/mdx": "^12.0.9",
+    "@types/luxon": "^2.0.9",
+    "luxon": "^2.3.0",
     "next": "latest",
     "react": "17.0.2",
     "react-dom": "17.0.2",
