--- a/v3/package.json
+++ b/v3/package.json
@@ -12,10 +12,10 @@
     "luxon": "^2.3.0",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "seedrandom": "^3.0.5"
+    "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^17.0.16",
     "@types/react": "^17.0.38",
     "typescript": "^4.5.4"
   }
