--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -32,6 +32,7 @@ jobs:
       run: |-
         rsync -rv v2/public/ dist/
         rsync -rv v3/out/ dist/
+        rsync -rv v4_out/ dist/
 
     - name: AWS Credentials
       if: github.event_name == 'push'
