--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -55,4 +55,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - run: gofmt -w **/*.go
+    - run: git diff --exit-code
     - run: make test
