--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-typescript": "^9.0.2",
     "@types/luxon": "^1.25.0",
     "luxon": "^1.25.0",
     "postcss-nested": "^6.0.0",
     "rollup": "^2.35.1",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-svelte": "^7.0.0",
-    "svelte": "^3.31.0"
+    "svelte": "^3.31.0",
+    "svelte-preprocess": "^4.10.7"
   },
   "scripts": {
     "dev": "nuxt",
