--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "vega-embed": "^6.21.0"
   },
   "devDependencies": {
-    "@rollup/plugin-node-resolve": "^11.0.1",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^9.0.2",
     "@types/luxon": "^1.25.0",
-    "luxon": "^1.25.0",
+    "luxon": "^1.28.0",
     "postcss-nested": "^6.0.0",
     "rollup": "^2.35.1",
     "rollup-plugin-css-only": "^3.1.0",
