--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@types/luxon": "^1.25.0",
     "luxon": "^1.28.0",
     "postcss-nested": "^6.0.0",
+    "prettier": "^2.7.1",
+    "prettier-plugin-svelte": "^2.8.0",
     "rollup": "^2.35.1",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-svelte": "^7.0.0",
